--- a/src/components/UserCard/user.css
+++ b/src/components/UserCard/user.css
@@ -1,51 +1,49 @@
 .profile {
-    background-color: #ffffff;
-    border: 1px solid #000;
-    border-radius: 4px;
-    margin-bottom: 64px;
-    padding: 10px;
-    width: 360px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+  background-color: #ffffff;
+  border: 1px solid #000;
+  border-radius: 4px;
+  margin-bottom: 64px;
+  padding: 10px;
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
 }
 
 .name {
-    font-weight: 700;
-    font-size: 16px;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .text_card {
-    font-weight: 500;
-    font-size: 14px;
-    color: #907E82;
+  font-weight: 500;
+  font-size: 14px;
+  color: #907e82;
 }
 
 .stats {
-    background-color: #f3f3f3;
-    display: flex;
-    padding: 20px 40px;
-    border: 1px solid #000;
-    border-radius: 4px;
+  background-color: #f3f3f3;
+  display: flex;
+  padding: 20px 40px;
+  border: 1px solid #000;
+  border-radius: 4px;
 }
 
 .label {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 40px;
 }
 .label:last-child {
-    margin-right: 0px;
-} 
-    
-
+  margin-right: 0px;
+}
